re PR libstdc++/56468 (Clang exposes bug with unexpected forward-declaration of type_info)

PR libstdc++/56468
	* libsupc++/exception_ptr.h (type_info): Declare.

From-SVN: r196749